deployment/liberty4all-deploy.yml
apiVersion: apps/v1beta1 
kind: Deployment
metadata:
  name: liberty4all
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: liberty4all
    spec:
      containers:
      - name: liberty4all
        image: demo/liberty4all
        ports:
        - containerPort: 9080
        livenessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 10
          periodSeconds: 10
