deployment/liberty4all-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: liberty4all
  namespace: jconallen
  labels:
    app: liberty4all
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9080
  selector:
    app: liberty4all
