deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  name:  liberty4all-kad-ingress
  namespace: default
spec:
  rules:
  - host: liberty4all-kad
    http:
      paths:
      - backend:
          serviceName: liberty4all-kad
          servicePort: 80
status:
  loadBalancer:
    ingress:
    - ip: 169.45.189.35
